--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 result
 result-*
 .envrc.local
+.direnv/
 
 # IDE
 .vscode/
@@ -22,6 +23,7 @@ htmlcov/
 # Generated outputs
 manifests/
 helm-charts/
+completions/
 
 # Python
 __pycache__/
