--- a/backend/package.json
+++ b/backend/package.json
@@ -27,13 +27,17 @@
     "axios": "^1.6.2",
     "better-sqlite3": "^9.2.2",
     "zod": "^3.22.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "jsonwebtoken": "^9.1.2",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.6",
     "@types/uuid": "^9.0.7",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.3.3",
     "tsx": "^4.7.0",
     "vitest": "^1.1.0",
