--- a/.github/workflows/deploy-notify.yml
+++ b/.github/workflows/deploy-notify.yml
@@ -23,6 +23,10 @@ on:
           - success
           - failure
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   notify-success:
     name: Notify Deployment Success
