ci: Update Nix installer action to fix version incompatibility
- Replace cachix/install-nix-action@v22 with DeterminateSystems/nix-installer-action@v12
- Install modern Nix version (2.18+) to match nixos-unstable channel requirements
- Apply to all workflows: test, ci, docs, release, security, deploy-notify
- Update action parameter names to match DeterminateSystems action
- This fixes Nix version incompatibility errors in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
 
       - uses: cachix/install-nix-action@v24
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: sandbox = false
+          github-access-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run nix flake check
         run: nix flake check --no-warn-dirty
@@ -34,8 +34,8 @@ jobs:
 
       - uses: cachix/install-nix-action@v24
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: sandbox = false
+          github-access-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build default package
         run: nix build .#default
@@ -51,8 +51,8 @@ jobs:
 
       - uses: cachix/install-nix-action@v24
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: sandbox = false
+          github-access-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Nix formatting
         run: nixpkgs-fmt --check . || true
@@ -84,8 +84,8 @@ jobs:
 
       - uses: cachix/install-nix-action@v24
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: sandbox = false
+          github-access-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run integration tests
         run: nix flake check
