--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: cachix/install-nix-action@v22
+      - uses: DeterminateSystems/nix-installer-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          extra-conf: sandbox = false
       
       - name: Run all checks
         run: nix flake check --offline
@@ -33,9 +33,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: cachix/install-nix-action@v22
+      - uses: DeterminateSystems/nix-installer-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          extra-conf: sandbox = false
       
       - name: Run test suite
         run: nix develop -c -- python3 -m pytest tests/ -v
@@ -47,9 +47,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: cachix/install-nix-action@v22
+      - uses: DeterminateSystems/nix-installer-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          extra-conf: sandbox = false
       
       - name: Build CLI artifact
         run: |
